--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "sass": "sass --watch sass:assets/css",
     "pug" : "pug -P --watch .",
     "jade" : "npm run pug",
-    "serve" : "python -m SimpleHTTPServer 8000"
+    "serve" : "python -m SimpleHTTPServer 8000",
+    "start" : "concurrently --kill-others \"npm run serve\" \"npm run sass\" \"npm run pug\""
   },
   "keywords": [
     "portfolio"
