--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@markdoc/next.js": "^0.1.8",
     "next": "^12.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "visualint": "^0.0.1"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "prettier": "^2.3.2"
