--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "deploy": "next build && next export && touch out/.nojekyll && git add out/",
     "prod": "git subtree push --prefix out origin gh-pages",
     "sass": "sass --watch sass:assets/css --style compressed",
-    "pug": "pug -P --watch .",
     "serve": "serve",
-    "dev:old": "concurrently --kill-others \"npm run serve\" \"npm run sass\" \"npm run pug\"",
-    "build:old": "pug . && npm run sass"
+    "dev:old": "concurrently --kill-others \"npm run serve\" \"npm run sass\"",
+    "build:old": "npm run sass"
   },
   "dependencies": {
     "@markdoc/markdoc": "^0.1.10",
