--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "next start",
     "prettier": "prettier --no-semi --single-quote --write **/*.{js,json}",
     "deploy": "next build && next export && touch out/.nojekyll && git add out/",
-    "prod": "git subtree push --prefix out origin gh-pages",
-    "serve": "serve",
-    "dev:old": "concurrently --kill-others \"npm run serve\""
+    "prod": "git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@markdoc/markdoc": "^0.1.10",
