--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "scripts": {
     "build": "next build",
-    "export": "next export",
     "dev": "next",
     "start": "next start",
-    "prettier": "prettier --no-semi --single-quote --write **/*.{js,json}",
-    "deploy": "next build && next export && touch out/.nojekyll && git add out/",
-    "prod": "git subtree push --prefix out origin gh-pages"
+    "prettier": "prettier --no-semi --single-quote --write **/*.{js,json}"
   },
   "dependencies": {
     "@markdoc/markdoc": "^0.1.10",
