--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@markdoc/markdoc": "^0.1.10",
     "@markdoc/next.js": "^0.1.8",
+    "@next/third-parties": "^14.2.2",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
